--- a/ov.html
+++ b/ov.html
@@ -242,9 +242,11 @@ function init() {
     </div>
     <h2 id="br2_20" class="expandable">Brückl 2 - Landesliga</h2>
     <div id="br2_20_2" class="expanded_container">
-      <a id="schedule_br2g_20" href="schedule.html?key=br2g_20"><h3>Spieltermine</h3></a>
-      <a id="results_br2g_20" href="results.html?key=br2g_20"><h3>Ergebnisse</h3></a>
-      <a id="standings_br2g_20" href="standings.html?key=br2g_20"><h3>Tabelle</h3></a>
+      <a id="schedule_br2m_20" href="schedule.html?key=br2m_20"><h3>Spieltermine (MPO)</h3></a>
+      <a id="results_br2m_20" href="results.html?key=br2m_20"><h3>Ergebnisse (MPO)</h3></a>
+      <a id="schedule_br2g_20" href="schedule.html?key=br2g_20"><h3>Spieltermine (GD)</h3></a>
+      <a id="results_br2g_20" href="results.html?key=br2g_20"><h3>Ergebnisse (GD)</h3></a>
+      <a id="standings_br2g_20" href="standings.html?key=br2g_20"><h3>Tabelle (GD)</h3></a>
       <a id="players_br2g_20" href="players.html?key=br2g_20"><h3>Spielerinnen</h3></a>
     </div>
     <h2 id="br1_20" class="expandable">Brückl 1 - Bundesliga</h2>
