--- a/ov.html
+++ b/ov.html
@@ -42,7 +42,8 @@ function init() {
     // 'ak': ...
     'br4_20': ['schedule_br4g_20', 'results_br4g_20', 'standings_br4g_20', 'players_br4g_20', 'spielfeld6'],
     'br3_20': ['schedule_br3g_20', 'results_br3g_20', 'standings_br3g_20', 'players_br3g_20', 'system6'],
-    'br2_20': ['schedule_br2g_20', 'results_br2g_20', 'standings_br2g_20', 'players_br2g_20'],
+    'br2_20': ['schedule_br2m_20', 'results_br2m_20',
+               'schedule_br2g_20', 'results_br2g_20', 'standings_br2g_20', 'players_br2g_20'],
     'br1_20': ['schedule_br1g_20', 'results_br1g_20', 'standings_br1g_20', 'players_br1g_20'],
 
     // training
