--- a/ov.html
+++ b/ov.html
@@ -101,7 +101,7 @@ function init() {
     <div id="u12_20_2" class="expanded_container">
       <a id="info12" href="/info/u12.html"><h3>Infos</h3></a>
       <a id="schedule_u12_20" href="schedule.html?key=u12_20"><h3>Turniere</h3></a>
-      <a id="standings_u12_20" href="standings.html?key=u12"><h3>Tabelle</h3></a>
+      <a id="standings_u12_20" href="standings.html?key=u12_20"><h3>Tabelle</h3></a>
     </div>
 
     <h2 id="u13_20" class="expandable">U13 - Supermini</h2>
