--- a/_work/herzhirn/herzhirn.html
+++ b/_work/herzhirn/herzhirn.html
@@ -61,6 +61,10 @@ div.info {
   font-weight: normal;
   overflow: auto;
 }
+p {
+  font-size: 1em;
+  text-align: left;
+}
 div.links {
   position: absolute;
   left: 0;
