--- a/teambuilding/herzhirn_21/index.html
+++ b/teambuilding/herzhirn_21/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
   <meta charset="UTF-8">
@@ -61,6 +61,10 @@ div.info {
   font-weight: normal;
   overflow: auto;
 }
+p {
+  font-size: 1em;
+  text-align: left;
+}
 div.links {
   position: absolute;
   left: 0;
@@ -109,64 +113,71 @@ strong {
   <script>
 var data = {
   "title": "Herz + Hirn",
-  "info": "Infos",
+  "info": "<p>Infos</p>",
   "items": [
     {
       "title": "Technik",
-      "info": "Aufspiel: Tempo + Daumen<br>Mitte: Richtung geben mit dem Handgelenk, nicht mit dem Körper<br>Außen: Runterziehen -&gt; 3m-Linie, Tempo<br>ein Trick für jede Spielerin",
+      "info": "<p>Aufspiel: Tempo + Daumen<br>Mitte: Richtung geben mit dem Handgelenk, nicht mit dem Körper<br>Außen: Runterziehen -&gt; 3m-Linie, Tempo<br>ein Trick für jede Spielerin</p>",
       "items": [
         {
           "title": "Aufspiel",
           "info": ""
-        }, {
+        },
+        {
           "title": "Mitte",
           "info": ""
-        }, {
+        },
+        {
           "title": "Außen",
           "info": ""
-        }, {
+        },
+        {
           "title": "Tricks",
-          "info": "Block-Out provozieren",
+          "info": "<p>Block-Out provozieren</p>",
           "items": [
             {
               "title": "Block-Out",
-              "info": "Wenn der Ball nah am Netz und weit genug außen ist,<br>kann die Angreiferin den Ball mit der Schlaghand nach außen drücken<br>und so den Ball vom Block ins Out spielen =&gt; <strong>Punkt für uns</strong>."
+              "info": "<p>Wenn der Ball nah am Netz und weit genug außen ist,<br>kann die Angreiferin den Ball mit der Schlaghand nach außen drücken<br>und so den Ball vom Block ins Out spielen =&gt; <strong>Punkt für uns</strong>.</p>"
             }
           ]
         }
       ]
-    }, {
+    },
+    {
       "title": "Infos zum Angriff",
-      "info": "Wann: Zeitpunkt des Absprungs<br>Wo: Ort des Absprung",
+      "info": "<p>Wann: Zeitpunkt des Absprungs<br>Wo: Ort des Absprung</p>",
       "items": [
         {
           "title": "Wann",
-          "info": "1. Tempo - Schnellangriff<br>&nbsp;&nbsp; 1, 3, 4<br>Die Angreiferin springt, wenn die Aufspielerin den Ball berührt.<br>Die Angreiferin orientiert sich an der &quot;Schulter&quot; der Aufspielerin.<br><br>2. Tempo - Meter-, Kombinationsangriff<br>&nbsp;&nbsp; 5v, 6, 8, 9(Mitte oder Pipe)<br>Die Angreiferin hat den 1. Schritt gemacht, wenn die Aufspielerin den Ball berührt.<br>&quot;Die Angreiferin ist am linken Fuß.&quot;<br><br>3. Tempo - Hoher Ball<br>&nbsp;&nbsp; 0, 2, 9(1)<br>Die Angreiferin startet nachdem die Aufspielerin gespielt hat."
-        }, {
+          "info": "<p>1. Tempo - Schnellangriff<br>1, 3, 4<br>Die Angreiferin springt, wenn die Aufspielerin den Ball berührt.<br>Die Angreiferin orientiert sich an der &quot;Schulter&quot; der Aufspielerin.</p><p>2. Tempo - Meter-, Kombinationsangriff<br>5v, 6, 8, 9(Mitte oder Pipe)<br>Die Angreiferin hat den 1. Schritt gemacht, wenn die Aufspielerin den Ball berührt.<br>&quot;Die Angreiferin ist am linken Fuß.&quot;</p><p>3. Tempo - Hoher Ball<br>0, 2, 9(1)<br>Die Angreiferin startet nachdem die Aufspielerin gespielt hat.</p>"
+        },
+        {
           "title": "Wo",
-          "info": "1: bei der Aufspielerin(vor ihr)<br>3: bei der Aufspielerin (hinter ihr)<br>4: ca. 2-3m vor der Aufspielerin<br><br>5v: ca.1-1,5m vor der Aufspielerin<br>6: Pos. 4 - &quot;bei der Antenne&quot;<br>8: ca. 3,5-4m vor der Aufspielerin<br><br>0: Pos. 4 - &quot;bei der Antenne links&quot;<br>2: Pos. 2 - &quot;bei der Antenne rechts&quot;<br><br>9er - Hinterfeld<br>immer knapp(!) hinter der 3m-Linie<br>Mitte: genau in der Mitte<br>Pipe: hinter der Aufspielerin<br>1: rechts, knapp innerhalb der Seitenlinie"
+          "info": "<p>1: bei der Aufspielerin(vor ihr)<br>3: bei der Aufspielerin (hinter ihr)<br>4: ca. 2-3m vor der Aufspielerin</p><p>5v: ca.1-1,5m vor der Aufspielerin<br>6: Pos. 4 - &quot;bei der Antenne&quot;<br>8: ca. 3,5-4m vor der Aufspielerin</p><p>0: Pos. 4 - &quot;bei der Antenne links&quot;<br>2: Pos. 2 - &quot;bei der Antenne rechts&quot;</p><p>9er - Hinterfeld<br>immer knapp(!) hinter der 3m-Linie<br>Mitte: genau in der Mitte<br>Pipe: hinter der Aufspielerin<br>1: rechts, knapp innerhalb der Seitenlinie</p>"
         }
       ]
-    }, {
+    },
+    {
       "title": "Stimmung",
-      "info": "Mannschaftstreffen Mai 2020",
+      "info": "<p>Mannschaftstreffen Mai 2020</p>",
       "items": [
         {
           "title": "Teambuilding",
-          "info": "Sind erfolgreiche Mannschaften eher laut oder leise?<br>Was könnte es bringen laut zu sein?<br>Was kann ich dazu beitragen, dass wir so richtig laut werden?",
+          "info": "<p>Sind erfolgreiche Mannschaften eher laut oder leise?<br>Was könnte es bringen laut zu sein?<br>Was kann ich dazu beitragen, dass wir so richtig laut werden?</p>",
           "items": [
             {
               "title": "Warum laut?",
-              "info": "Bild",
+              "info": "<p><img src=\"2005241.jpeg\" alt=\"Warum laut?\" /></p>",
               "items": [
                 {
                   "title": "Danke für Deine Mitarbeit!",
                   "info": ""
                 }
               ]
-            }, {
+            },
+            {
               "title": "Wir werden laut!",
-              "info": "Bild",
+              "info": "<p><img src=\"2005242.jpeg\" alt=\"Warum laut?\" /></p>",
               "items": [
                 {
                   "title": "Danke für Deine Mitarbeit!",
@@ -179,8 +190,7 @@ var data = {
       ]
     }
   ]
-}
-
+};
 
 var data_history = [],
     links = null;
