--- a/_work/herzhirn/herzhirn.html
+++ b/_work/herzhirn/herzhirn.html
@@ -61,9 +61,15 @@ div.info {
   font-weight: normal;
   overflow: auto;
 }
-p {
+p, ol, ul, li {
   font-size: 1em;
   text-align: left;
+}
+ol, ul {
+  padding-left: 1.5em;
+}
+p {
+  padding: 0.5em 0;
 }
 div.links {
   position: absolute;
