--- a/teambuilding/herzhirn_21/index.html
+++ b/teambuilding/herzhirn_21/index.html
@@ -61,9 +61,15 @@ div.info {
   font-weight: normal;
   overflow: auto;
 }
-p {
+p, ol, ul, li {
   font-size: 1em;
   text-align: left;
+}
+ol, ul {
+  padding-left: 1.5em;
+}
+p {
+  padding: 0.5em 0;
 }
 div.links {
   position: absolute;
@@ -149,7 +155,7 @@ var data = {
       "items": [
         {
           "title": "Wann",
-          "info": "<p>1. Tempo - Schnellangriff<br>1, 3, 4<br>Die Angreiferin springt, wenn die Aufspielerin den Ball berührt.<br>Die Angreiferin orientiert sich an der &quot;Schulter&quot; der Aufspielerin.</p><p>2. Tempo - Meter-, Kombinationsangriff<br>5v, 6, 8, 9(Mitte oder Pipe)<br>Die Angreiferin hat den 1. Schritt gemacht, wenn die Aufspielerin den Ball berührt.<br>&quot;Die Angreiferin ist am linken Fuß.&quot;</p><p>3. Tempo - Hoher Ball<br>0, 2, 9(1)<br>Die Angreiferin startet nachdem die Aufspielerin gespielt hat.</p>"
+          "info": "<ol><li><p>Tempo - Schnellangriff<br>1, 3, 4<br>Die Angreiferin springt, wenn die Aufspielerin den Ball berührt.<br>Die Angreiferin orientiert sich an der &quot;Schulter&quot; der Aufspielerin.</p></li><li><p>Tempo - Meter-, Kombinationsangriff<br>5v, 6, 8, 9(Mitte oder Pipe)<br>Die Angreiferin hat den 1. Schritt gemacht, wenn die Aufspielerin den Ball berührt.<br>&quot;Die Angreiferin ist am linken Fuß.&quot;</p></li><li><p>Tempo - Hoher Ball<br>0, 2, 9(1)<br>Die Angreiferin startet nachdem die Aufspielerin gespielt hat.</p></li></ol>"
         },
         {
           "title": "Wo",
