--- a/ov.html
+++ b/ov.html
@@ -15,8 +15,10 @@ body {
   <link rel="shortcut icon" href="/favicons/favicon.ico">
   <script src="/script/polyfills.js"></script>
   <script src="/elements/expander/script.js"></script>
+  <script src="/script/utils.js"></script>
   <script>
 function init() {
+  bhv.utils.connectSW();
   var expanders = [
     'nw',
     'u12_21', 'u13_21', 'u14_21', 'u15_21', 'u16_21', 'u18_21', 'u20_21',
