ensure window.bhv

--- a/_work/statistics/statistics.html
+++ b/_work/statistics/statistics.html
@@ -178,7 +178,7 @@ svg {
   <script>
 function init() {
   var expanders = [{{ids}}];
-  bhv.elements.expander.init(expanders);
+  window.bhv.elements.expander.init(expanders);
 }
   </script>
 </head>
