--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ a {
   <script src="/script/utils.js"></script>
   <script>
 // register service worker
-bhv.utils.registerSW();
+window.bhv.utils.registerSW();
   </script>
 </head>
 <body>
