--- a/ov.html
+++ b/ov.html
@@ -87,11 +87,12 @@ function init() {
     'u14_20': ['schedule_u14_20', 'standings_u14_20'],
     'u13_20': ['schedule_u13_20', 'standings_u13_20'],
     'u12_20': ['schedule_u12_20', 'standings_u12_20'],
-    'br4_20': ['schedule_br4g_20', 'results_br4g_20', 'standings_br4g_20', 'players_br4g_20'],
-    'br3_20': ['schedule_br3g_20', 'results_br3g_20', 'standings_br3g_20', 'players_br3g_20'],
-    'br2_20': ['schedule_br2m_20', 'results_br2m_20',
-               'schedule_br2g_20', 'results_br2g_20', 'standings_br2g_20', 'players_br2g_20'],
-    'br1_20': ['schedule_br1g_20', 'results_br1g_20', 'standings_br1g_20', 'players_br1g_20'],
+
+    // 'schedule_br4g_20'; 'schedule_br3g_20'; 'schedule_br2m_20', 'schedule_br2g_20'; 'schedule_br1g_20'
+    'br4_20': ['results_br4g_20', 'standings_br4g_20', 'players_br4g_20'],
+    'br3_20': ['results_br3g_20', 'standings_br3g_20', 'players_br3g_20'],
+    'br2_20': ['results_br2m_20', 'results_br2g_20', 'standings_br2g_20', 'players_br2g_20'],
+    'br1_20': ['results_br1g_20', 'standings_br1g_20', 'players_br1g_20'],
 
     // infos
     'info': ['calendar', 'wunsch', 'gesucht', 'divinfo21']
@@ -225,30 +226,30 @@ function init() {
 
         <h2 id="br4_20" class="expandable">Brückl 4 - Unterliga</h2>
         <div id="br4_20_2" class="expanded_container">
-          <a id="schedule_br4g_20" href="schedule.html?key=br4g_20"><h3>Spieltermine</h3></a>
+          <!--a id="schedule_br4g_20" href="schedule.html?key=br4g_20"><h3>Spieltermine</h3></a-->
           <a id="results_br4g_20" href="results.html?key=br4g_20"><h3>Ergebnisse</h3></a>
           <a id="standings_br4g_20" href="standings.html?key=br4g_20"><h3>Tabelle</h3></a>
           <a id="players_br4g_20" href="players.html?key=br4g_20"><h3>Spielerinnen</h3></a>
         </div>
         <h2 id="br3_20" class="expandable">Brückl 3 - Unterliga</h2>
         <div id="br3_20_2" class="expanded_container">
-          <a id="schedule_br3g_20" href="schedule.html?key=br3g_20"><h3>Spieltermine</h3></a>
+          <!--a id="schedule_br3g_20" href="schedule.html?key=br3g_20"><h3>Spieltermine</h3></a-->
           <a id="results_br3g_20" href="results.html?key=br3g_20"><h3>Ergebnisse</h3></a>
           <a id="standings_br3g_20" href="standings.html?key=br3g_20"><h3>Tabelle</h3></a>
           <a id="players_br3g_20" href="players.html?key=br3g_20"><h3>Spielerinnen</h3></a>
         </div>
         <h2 id="br2_20" class="expandable">Brückl 2 - Landesliga</h2>
         <div id="br2_20_2" class="expanded_container">
-          <a id="schedule_br2m_20" href="schedule.html?key=br2m_20"><h3>Spieltermine (MPO)</h3></a>
+          <!--a id="schedule_br2m_20" href="schedule.html?key=br2m_20"><h3>Spieltermine (MPO)</h3></a-->
           <a id="results_br2m_20" href="results.html?key=br2m_20"><h3>Ergebnisse (MPO)</h3></a>
-          <a id="schedule_br2g_20" href="schedule.html?key=br2g_20"><h3>Spieltermine (GD)</h3></a>
+          <!--a id="schedule_br2g_20" href="schedule.html?key=br2g_20"><h3>Spieltermine (GD)</h3></a-->
           <a id="results_br2g_20" href="results.html?key=br2g_20"><h3>Ergebnisse (GD)</h3></a>
           <a id="standings_br2g_20" href="standings.html?key=br2g_20"><h3>Tabelle (GD)</h3></a>
           <a id="players_br2g_20" href="players.html?key=br2g_20"><h3>Spielerinnen</h3></a>
         </div>
         <h2 id="br1_20" class="expandable">Brückl 1 - Bundesliga</h2>
         <div id="br1_20_2" class="expanded_container">
-          <a id="schedule_br1g_20" href="schedule.html?key=br1g_20"><h3>Spieltermine</h3></a>
+          <!--a id="schedule_br1g_20" href="schedule.html?key=br1g_20"><h3>Spieltermine</h3></a-->
           <a id="results_br1g_20" href="results.html?key=br1g_20"><h3>Ergebnisse</h3></a>
           <a id="standings_br1g_20" href="standings.html?key=br1g_20"><h3>Tabelle</h3></a>
           <a id="players_br1g_20" href="players.html?key=br1g_20"><h3>Spielerinnen</h3></a>
@@ -325,7 +326,6 @@ function init() {
         <h2 id="br4_19" class="expandable">Brückl 4 - Unterliga</h2>
         <div id="br4_19_2" class="expanded_container">
           <!--a id="grundlagen_br4_19" href="uld/grundlagen"><h3>Grundlagen</h3></a-->
-          <!--a id="schedule_br4_19" href="schedule.html?key=br4_19"><h3>Spieltermine (FD)</h3></a-->
           <a id="standings_br4_19" href="standings.html?key=br4_19"><h3>Tabelle (FD)</h3></a>
           <a id="results_br4_19" href="results.html?key=br4_19"><h3>Ergebnisse (FD)</h3></a>
           <a id="statistics_br4_19" href="/statistics/19/u15FD.html"><h3>Statistik (FD)</h3></a>
@@ -336,7 +336,6 @@ function init() {
         <h2 id="br3_19" class="expandable">Brückl 3 - Unterliga/Landesliga</h2>
         <div id="br3_19_2" class="expanded_container">
           <!--a id="grundlagen_br3_19" href="/uld/grundlagen3"><h3>Grundlagen</h3></a-->
-          <!--a id="schedule_br3_19" href="schedule.html?key=br3_19"><h3>Spieltermine (AR)</h3></a-->
           <a id="standings_br3_19" href="standings.html?key=br3_19"><h3>Tabelle (AR)</h3></a>
           <a id="results_br3_19" href="results.html?key=br3_19"><h3>Ergebnisse (AR)</h3></a>
           <a id="statistics_br3_19" href="/statistics/19/u15AR.html"><h3>Statistik (AR)</h3></a>
@@ -348,7 +347,6 @@ function init() {
 
         <h2 id="br2_19" class="expandable">Brückl 2 - Landesliga</h2>
         <div id="br2_19_2" class="expanded_container">
-          <!--a id="schedule_br2m_19" href="schedule.html?key=br2m_19"><h3>Spieltermine (MPO)</h3></a-->
           <a id="results_br2m_19" href="results.html?key=br2m_19"><h3>Ergebnisse (MPO)</h3></a>
           <a id="statistics_br2_19" href="/statistics/19/mpo.html"><h3>Statistik (MPO)</h3></a>
           <a id="standings_br2g_19" href="standings.html?key=br2g_19"><h3>Tabelle (GD)</h3></a>
@@ -357,7 +355,6 @@ function init() {
 
         <h2 id="br1_19" class="expandable">Brückl 1 - Bundesliga</h2>
         <div id="br1_19_2" class="expanded_container">
-          <!--a id="schedule_br1_19" href="schedule.html?key=br1_19"><h3>Spieltermine (MR)</h3></a-->
           <a id="standings_br1_19" href="standings.html?key=br1_19"><h3>Tabelle (MR)</h3></a>
           <a id="results_br1_19" href="results.html?key=br1_19"><h3>Ergebnisse (MR)</h3></a>
           <a id="standings_br1g_19" href="standings.html?key=br1g_19"><h3>Tabelle (GD)</h3></a>
