archive 20 - junior players

--- a/ov.html
+++ b/ov.html
@@ -81,12 +81,12 @@ function init() {
     'br1_19': ['schedule_br1_19', 'results_br1_19', 'standings_br1_19', 'results_br1g_19',
                'standings_br1g_19'],
     // 'a20': ...
-    'u20_20': ['standings_u20_20'],
-    'u16_20': ['schedule_u16_20', 'standings_u16_20'],
-    'u15_20': ['schedule_u15_20', 'standings_u15_20'],
-    'u14_20': ['schedule_u14_20', 'standings_u14_20'],
-    'u13_20': ['schedule_u13_20', 'standings_u13_20'],
-    'u12_20': ['schedule_u12_20', 'standings_u12_20'],
+    'u20_20': ['standings_u20_20', 'players_u20_20'],
+    'u16_20': ['schedule_u16_20', 'standings_u16_20', 'players_u16_20'],
+    'u15_20': ['schedule_u15_20', 'standings_u15_20', 'players_u15_20'],
+    'u14_20': ['schedule_u14_20', 'standings_u14_20', 'players_u14_20', 'players_u14m_20'],
+    'u13_20': ['schedule_u13_20', 'standings_u13_20', 'players_u13_20', 'players_u13m_20'],
+    'u12_20': ['schedule_u12_20', 'standings_u12_20', 'players_u12_20'],
 
     // 'schedule_br4g_20'; 'schedule_br3g_20'; 'schedule_br2m_20', 'schedule_br2g_20'; 'schedule_br1g_20'
     'br4_20': ['results_br4g_20', 'standings_br4g_20', 'players_br4g_20'],
@@ -198,30 +198,38 @@ function init() {
         <div id="u12_20_2" class="expanded_container">
           <a id="schedule_u12_20" href="schedule.html?key=u12_20"><h3>Turniere</h3></a>
           <a id="standings_u12_20" href="standings.html?key=u12_20"><h3>Tabelle</h3></a>
+          <a id="players_u12_20" href="players.html?key=u12_20"><h3>Spielerinnen</h3></a>
         </div>
         <h2 id="u13_20" class="expandable">U13 - Supermini</h2>
         <div id="u13_20_2" class="expanded_container">
           <a id="schedule_u13_20" href="schedule.html?key=u13_20"><h3>Turniere</h3></a>
           <a id="standings_u13_20" href="standings.html?key=u13_20"><h3>Tabelle</h3></a>
+          <a id="players_u13_20" href="players.html?key=u13_20"><h3>Spielerinnen</h3></a>
+          <a id="players_u13m_20" href="players.html?key=u13m_20"><h3>Spieler</h3></a>
         </div>
         <h2 id="u14_20" class="expandable">U14 - Mini</h2>
         <div id="u14_20_2" class="expanded_container">
           <a id="schedule_u14_20" href="schedule.html?key=u14_20"><h3>Turniere</h3></a>
           <a id="standings_u14_20" href="standings.html?key=u14_20"><h3>Tabelle</h3></a>
+          <a id="players_u14_20" href="players.html?key=u14_20"><h3>Spielerinnen</h3></a>
+          <a id="players_u14m_20" href="players.html?key=u14m_20"><h3>Spieler</h3></a>
         </div>
         <h2 id="u15_20" class="expandable">U15 - Midi</h2>
         <div id="u15_20_2" class="expanded_container">
           <a id="schedule_u15_20" href="schedule.html?key=u15_20"><h3>Turniere</h3></a>
           <a id="standings_u15_20" href="standings.html?key=u15_20"><h3>Tabelle</h3></a>
+          <a id="players_u15_20" href="players.html?key=u15_20"><h3>Spielerinnen</h3></a>
         </div>
         <h2 id="u16_20" class="expandable">U16 - Schülerinnen</h2>
         <div id="u16_20_2" class="expanded_container">
           <a id="schedule_u16_20" href="schedule.html?key=u16_20"><h3>Turniere</h3></a>
           <a id="standings_u16_20" href="standings.html?key=u16_20"><h3>Tabelle</h3></a>
+          <a id="players_u16_20" href="players.html?key=u16_20"><h3>Spielerinnen</h3></a>
         </div>
         <h2 id="u20_20" class="expandable">U20 - Juniorinnen</h2>
         <div id="u20_20_2" class="expanded_container">
           <a id="standings_u20_20" href="standings.html?key=u20_20"><h3>Endstand</h3></a>
+          <a id="players_u20_20" href="players.html?key=u20_20"><h3>Spielerinnen</h3></a>
         </div>
 
         <h2 id="br4_20" class="expandable">Brückl 4 - Unterliga</h2>
