--- a/diary.html
+++ b/diary.html
@@ -18,8 +18,6 @@ div.info {
   font-size: 2.5em;
   padding: 0.25em;
 }
-/* -- training info - (end) ------------------------------------------------ */
-
   </style>
   <script src="/script/polyfills.js"></script>
   <script src="/script/request.js"></script>
@@ -77,10 +75,10 @@ function setDiary(rawDiary) {
   for (var i = 0; i < keys.length; ++i) {
     var dat = keys[i];
 
-    html = tpl.replace('{{title}}',
-      _fmt(dat, 6) + '.' + _fmt(dat, 4) + '.: ' + diary[dat].title)
-      .replace('{{info}}', diary[dat].info)
-      + html;
+    html += tpl
+      .replace('{{title}}',
+        _fmt(dat, 8) + '.' + _fmt(dat, 5) + '.: ' + diary[dat].title)
+      .replace('{{info}}', diary[dat].info);
   }
 
   // inject html
@@ -88,7 +86,6 @@ function setDiary(rawDiary) {
   if (container) {
     container.innerHTML = html;
   }
-
 }
 
 /**
