--- a/presence.html
+++ b/presence.html
@@ -178,6 +178,9 @@ div#training_info > div.info {
   font-size: 2.5em;
   padding: 0.25em;
 }
+div#training_info > div.info * {
+  font-size: 1em;
+}
 /* -- training info - (end) ------------------------------------------------ */
   </style>
   <script src="/script/polyfills.js"></script>
