presence, diary, b added

--- a/ov.html
+++ b/ov.html
@@ -52,7 +52,7 @@ function init() {
     'u12_21': ['info12'],
 
     // 'ak': ...
-    'br3_21': ['spielfeld6', 'system6'],
+    'br3_21': ['training_b', 'tagebuch_b', 'spielfeld6', 'system6'],
     'br2_21': [],
     'br1_21': ['herzhirn_21', 'training_a', 'tagebuch_a'],
 
@@ -171,6 +171,8 @@ function init() {
     <div id="ak_2" class="expanded_container">
       <h2 id="br3_21" class="expandable">Brückl 3 - Unterliga</h2>
       <div id="br3_21_2" class="expanded_container">
+        <a id="training_b" href="presence.html?key=b"><h3>Anwesenheit</h3></a>
+        <a id="tagebuch_b" href="diary.html?key=b"><h3>Trainingstagebuch</h3></a>
         <a id="spielfeld6" href="/system6/spielfeld"><h3>Spielsystem 1</h3></a>
         <a id="system6" href="/system6"><h3>Spielsystem 2</h3></a>
       </div>
