--- a/ov.html
+++ b/ov.html
@@ -52,11 +52,10 @@ function init() {
     'u12_21': ['info12'],
 
     // 'ak': ...
-    'br3_21': ['training_b', 'training_bm', 'tagebuch_b', 'spielfeld6', 'system6'],
+    // 'spielfeld6',
+    'br3_21': ['training_b', 'training_bm', 'tagebuch_b', 'system6'],
     'br2_21': [],
-    'br1_21': ['herzhirn_21', 'training_a', 'tagebuch_a'],
-
-    // training - , 'training_b2', 'training_jungs'
+    'br1_21': ['herzhirn_21', 'training_a', 'tagebuch_a', 'system1'],
 
     // 'archive': ...
     // 'a19': ...
@@ -174,8 +173,8 @@ function init() {
         <a id="training_b" href="presence.html?key=b"><h3>Anwesenheit</h3></a>
         <a id="training_bm" href="presence.html?key=jungs"><h3>Anwesenheit Jungs</h3></a>
         <a id="tagebuch_b" href="diary.html?key=b"><h3>Trainingstagebuch</h3></a>
-        <a id="spielfeld6" href="/system6/spielfeld"><h3>Spielsystem 1</h3></a>
-        <a id="system6" href="/system6"><h3>Spielsystem 2</h3></a>
+        <!--a id="spielfeld6" href="/system6/spielfeld"><h3>Spielsystem 4</h3></a-->
+        <a id="system6" href="/system6"><h3>Spielsystem</h3></a>
       </div>
 
       <h2 id="br2_21">Brückl 2 - Landesliga</h2>
@@ -188,6 +187,7 @@ function init() {
         <a id="herzhirn_21" href="/teambuilding/herzhirn_21"><h3>Herz + Hirn</h3></a>
         <a id="training_a" href="presence.html?key=a"><h3>Anwesenheit</h3></a>
         <a id="tagebuch_a" href="diary.html?key=a"><h3>Trainingstagebuch</h3></a>
+        <a id="system1" href="/system1"><h3>Spielsystem</h3></a>
       </div>
     </div>
 
@@ -383,7 +383,6 @@ function init() {
       <a id="gesucht" href="info/gesucht.html"><h3>Gesucht!<br>Bitte an Freunde und Bekannte weiterleiten.</h3></a>
       <a id="divinfo21" href="info/info21.html"><h3>Allgemeine Infos</h3></a>
     </div>
-
   </nav>
 </body>
 </html>
