setter: allow quick

--- a/system1/angriff/aufspiel.html
+++ b/system1/angriff/aufspiel.html
@@ -558,30 +558,30 @@ function menuHandler(fullkey, state) {
     <path class="arrow" d="M650,260 c-68,-138 -120,-140 -140,-40 l-2,-13 m2,13 l7.5,-11"/>
     <text class="subtitle" dy="0.35em" text-anchor="middle" x="550" y="510">Halbschneller Ball zwischen <tspan class="bold">4er</tspan> und <tspan class="bold">1er</tspan>.</text>
   </g>
-  <g class="set_other">
+  <g class="set_main">
     <g class="button">
-      <rect x="560" y="310" width="70" height="70" style="fill: #A9A9A9;" rx="15" ry="15"/>
-      <rect x="565" y="315" width="60" height="60" style="fill: #D3D3D3;" rx="10" ry="10"/>
+      <rect x="560" y="310" width="70" height="70" style="fill: #FFA500;" rx="15" ry="15"/>
+      <rect x="565" y="315" width="60" height="60" style="fill: #FFD700;" rx="10" ry="10"/>
       <text dy="0.35em" text-anchor="middle" x="595" y="345">1</text>
     </g>
     <g class="button">
-      <rect x="560" y="405" width="70" height="70" style="fill: #A9A9A9;" rx="15" ry="15"/>
-      <rect x="565" y="410" width="60" height="60" style="fill: #D3D3D3;" rx="10" ry="10"/>
+      <rect x="560" y="405" width="70" height="70" style="fill: #FFA500;" rx="15" ry="15"/>
+      <rect x="565" y="410" width="60" height="60" style="fill: #FFD700;" rx="10" ry="10"/>
       <image x="566" y="412" width="58" height="58" xlink:href="images/set_1.png"/>
       <image x="566" y="412" width="58" height="58" xlink:href="images/set_1_hi.png" class="hi"/>
     </g>
     <path class="arrow" d="M650,260 l-50,-40 l3,10 m-3,-10 l10,-1"/>
     <text class="subtitle" dy="0.35em" text-anchor="middle" x="550" y="510"><tspan class="bold">Aufsteiger:</tspan> Schneller Ball vor der Aufspielerin.</text>
   </g>
-  <g class="set_other">
+  <g class="set_main">
     <g class="button">
-      <rect x="649" y="310" width="70" height="70" style="fill: #A9A9A9;" rx="15" ry="15"/>
-      <rect x="654" y="315" width="60" height="60" style="fill: #D3D3D3;" rx="10" ry="10"/>
+      <rect x="649" y="310" width="70" height="70" style="fill: #FFA500;" rx="15" ry="15"/>
+      <rect x="654" y="315" width="60" height="60" style="fill: #FFD700;" rx="10" ry="10"/>
       <text dy="0.35em" text-anchor="middle" x="684" y="345">3</text>
     </g>
     <g class="button">
-      <rect x="649" y="405" width="70" height="70" style="fill: #A9A9A9;" rx="15" ry="15"/>
-      <rect x="654" y="410" width="60" height="60" style="fill: #D3D3D3;" rx="10" ry="10"/>
+      <rect x="649" y="405" width="70" height="70" style="fill: #FFA500;" rx="15" ry="15"/>
+      <rect x="654" y="410" width="60" height="60" style="fill: #FFD700;" rx="10" ry="10"/>
       <image x="655" y="412" width="58" height="58" xlink:href="images/set_3.png"/>
       <image x="655" y="412" width="58" height="58" xlink:href="images/set_3_hi.png" class="hi"/>
     </g>
