--- a/ov.html
+++ b/ov.html
@@ -53,7 +53,7 @@ function init() {
 
     // 'ak': ...
     // 'spielfeld6',
-    'br3_21': ['training_b', 'training_bm', 'tagebuch_b', 'system6'],
+    'br3_21': ['training_b', 'training_jungs', 'tagebuch_b', 'system6'],
     'br2_21': [],
     'br1_21': ['herzhirn_21', 'training_a', 'tagebuch_a', 'system1'],
 
@@ -171,7 +171,7 @@ function init() {
       <h2 id="br3_21" class="expandable">Brückl 3 - Unterliga</h2>
       <div id="br3_21_2" class="expanded_container">
         <a id="training_b" href="presence.html?key=b"><h3>Anwesenheit</h3></a>
-        <a id="training_bm" href="presence.html?key=jungs"><h3>Anwesenheit Jungs</h3></a>
+        <a id="training_jungs" href="presence.html?key=jungs"><h3>Anwesenheit Jungs</h3></a>
         <a id="tagebuch_b" href="diary.html?key=b"><h3>Trainingstagebuch</h3></a>
         <!--a id="spielfeld6" href="/system6/spielfeld"><h3>Spielsystem 4</h3></a-->
         <a id="system6" href="/system6"><h3>Spielsystem</h3></a>
