--- a/system1/angriff/aufspiel.html
+++ b/system1/angriff/aufspiel.html
@@ -342,10 +342,11 @@ function menuHandler(fullkey, state) {
 <a href="/system1/#aufspiel"><img src="/image/bhv1.gif"/></a>
 </div>
 </div>
-<div id="svgcanvas"><div class="animation_cmds">
+<div id="svgcanvas"><div class="animation_cmds no_anim no_menu">
   <div class="play"><div>&nbsp;</div></div>
   <div class="pause"><div>&nbsp;</div></div>
   <div class="stop"><div>&nbsp;</div></div>
+  <div class="menu"><div class="d1">&nbsp;</div><div class="d2">&nbsp;</div></div>
 </div>
 <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 1100 540" width="100%" heigth="540" height="100%"><rect id="bg" x="0" y="0" width="1100" height="540" />
 
